<?xml version="1.0" encoding="UTF-8"?>
<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21507" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="XTK-vr-mpP">
    <device id="retina6_12" orientation="portrait" appearance="light"/>
    <dependencies>
        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21505"/>
        <capability name="System colors in document resources" minToolsVersion="11.0"/>
        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
    </dependencies>
    <scenes>
        <!--Navigation Controller-->
        <scene sceneID="A8z-eg-KvT">
            <objects>
                <navigationController id="XTK-vr-mpP" sceneMemberID="viewController">
                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="ob8-UJ-zYt">
                        <rect key="frame" x="0.0" y="59" width="393" height="44"/>
                        <autoresizingMask key="autoresizingMask"/>
                    </navigationBar>
                    <connections>
                        <segue destination="VjF-aO-JQy" kind="relationship" relationship="rootViewController" id="eKj-kb-kwo"/>
                    </connections>
                </navigationController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="Yem-ZT-FXE" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="-491" y="-118"/>
        </scene>
        <!--Main Table View Controller-->
        <scene sceneID="IMn-fT-HJQ">
            <objects>
                <tableViewController id="VjF-aO-JQy" customClass="MainTableViewController" customModule="Collections" customModuleProvider="target" sceneMemberID="viewController">
                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="static" style="grouped" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="18" estimatedSectionHeaderHeight="-1" sectionFooterHeight="18" estimatedSectionFooterHeight="-1" id="IDo-tS-xU1">
                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                        <inset key="separatorInset" minX="15" minY="0.0" maxX="0.0" maxY="0.0"/>
                        <sections>
                            <tableViewSection id="CT5-3u-pwo">
                                <cells>
                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" accessoryType="disclosureIndicator" indentationWidth="10" id="rAW-dC-fbL">
                                        <rect key="frame" x="0.0" y="18" width="393" height="43.666667938232422"/>
                                        <autoresizingMask key="autoresizingMask"/>
                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="rAW-dC-fbL" id="57v-M9-k9g">
                                            <rect key="frame" x="0.0" y="0.0" width="362.66666666666669" height="43.666667938232422"/>
                                            <autoresizingMask key="autoresizingMask"/>
                                            <subviews>
                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Array" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Jja-RJ-L1g">
                                                    <rect key="frame" x="19.999999999999993" y="10.999999999999998" width="112.33333333333331" height="21.333333333333329"/>
                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                    <nil key="textColor"/>
                                                    <nil key="highlightedColor"/>
                                                </label>
                                            </subviews>
                                            <constraints>
                                                <constraint firstAttribute="trailing" relation="lessThanOrEqual" secondItem="Jja-RJ-L1g" secondAttribute="trailing" constant="230.33333333333334" id="4SM-EH-DsG"/>
                                                <constraint firstItem="Jja-RJ-L1g" firstAttribute="leading" secondItem="57v-M9-k9g" secondAttribute="leading" constant="20" symbolic="YES" id="H5W-su-Wax"/>
                                                <constraint firstItem="Jja-RJ-L1g" firstAttribute="top" secondItem="57v-M9-k9g" secondAttribute="topMargin" id="XKq-Fq-CuD"/>
                                            </constraints>
                                        </tableViewCellContentView>
                                        <connections>
                                            <segue destination="3wI-XL-4bh" kind="show" id="HTl-oQ-uHO"/>
                                        </connections>
                                    </tableViewCell>
                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" restorationIdentifier="Set" preservesSuperviewLayoutMargins="YES" selectionStyle="default" accessoryType="disclosureIndicator" indentationWidth="10" reuseIdentifier="SetTableCell" id="QBg-0E-HEz">
                                        <rect key="frame" x="0.0" y="61.666667938232422" width="393" height="43.666667938232422"/>
                                        <autoresizingMask key="autoresizingMask"/>
                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="QBg-0E-HEz" id="j92-an-M4t">
                                            <rect key="frame" x="0.0" y="0.0" width="362.66666666666669" height="43.666667938232422"/>
                                            <autoresizingMask key="autoresizingMask"/>
                                            <subviews>
                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Set" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="oln-p4-117">
                                                    <rect key="frame" x="19.999999999999993" y="11" width="116.33333333333331" height="21"/>
                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                    <nil key="textColor"/>
                                                    <nil key="highlightedColor"/>
                                                </label>
                                            </subviews>
                                            <constraints>
                                                <constraint firstItem="oln-p4-117" firstAttribute="leading" secondItem="j92-an-M4t" secondAttribute="leadingMargin" id="kZe-Ef-7ng"/>
                                                <constraint firstItem="oln-p4-117" firstAttribute="top" secondItem="j92-an-M4t" secondAttribute="topMargin" id="zT2-K1-D8a"/>
                                                <constraint firstAttribute="trailingMargin" relation="lessThanOrEqual" secondItem="oln-p4-117" secondAttribute="trailing" constant="218.33333333333334" id="zaO-AH-the"/>
                                            </constraints>
                                        </tableViewCellContentView>
                                    </tableViewCell>
                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" accessoryType="disclosureIndicator" indentationWidth="10" id="M4u-UL-TOb">
                                        <rect key="frame" x="0.0" y="105.33333587646484" width="393" height="43.666667938232422"/>
                                        <autoresizingMask key="autoresizingMask"/>
                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="M4u-UL-TOb" id="7GR-8u-ZIx">
                                            <rect key="frame" x="0.0" y="0.0" width="362.66666666666669" height="43.666667938232422"/>
                                            <autoresizingMask key="autoresizingMask"/>
                                            <subviews>
                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Dictionary" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="osw-4n-3kW">
                                                    <rect key="frame" x="19.999999999999993" y="11" width="116.33333333333331" height="21"/>
                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                    <nil key="textColor"/>
                                                    <nil key="highlightedColor"/>
                                                </label>
                                            </subviews>
                                            <constraints>
                                                <constraint firstItem="osw-4n-3kW" firstAttribute="top" secondItem="7GR-8u-ZIx" secondAttribute="topMargin" id="Qix-m2-8Yf"/>
                                                <constraint firstAttribute="trailingMargin" relation="lessThanOrEqual" secondItem="osw-4n-3kW" secondAttribute="trailing" constant="218.33333333333334" id="cEk-fF-QTA"/>
                                                <constraint firstItem="osw-4n-3kW" firstAttribute="leading" secondItem="7GR-8u-ZIx" secondAttribute="leadingMargin" id="ftp-Wn-CJx"/>
                                            </constraints>
                                        </tableViewCellContentView>
                                    </tableViewCell>
                                </cells>
                            </tableViewSection>
                        </sections>
                        <connections>
                            <outlet property="dataSource" destination="VjF-aO-JQy" id="tgP-gk-J8o"/>
                            <outlet property="delegate" destination="VjF-aO-JQy" id="p5Y-ob-mqq"/>
                        </connections>
                    </tableView>
                    <navigationItem key="navigationItem" id="w3I-Lh-PVD"/>
                    <connections>
                        <outlet property="mainTableView" destination="IDo-tS-xU1" id="uXC-lc-3GK"/>
                        <segue destination="NhY-21-eQ6" kind="show" identifier="showSet" id="LPh-Wc-7cg"/>
                    </connections>
                </tableViewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="A0K-SP-ahx" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="360" y="-118"/>
        </scene>
        <!--Array-->
        <scene sceneID="pgP-TR-AWj">
            <objects>
                <viewControllerPlaceholder storyboardName="Array" id="3wI-XL-4bh" sceneMemberID="viewController">
                    <navigationItem key="navigationItem" customizationIdentifier="" id="L4o-pJ-6Ia"/>
                </viewControllerPlaceholder>
                <placeholder placeholderIdentifier="IBFirstResponder" id="AsT-aa-W03" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="1252" y="-155"/>
        </scene>
        <!--Set-->
        <scene sceneID="Ett-E6-mSn">
            <objects>
                <viewControllerPlaceholder storyboardName="Set" id="NhY-21-eQ6" sceneMemberID="viewController">
                    <navigationItem key="navigationItem" id="8mo-F4-axj"/>
                </viewControllerPlaceholder>
                <placeholder placeholderIdentifier="IBFirstResponder" id="N9q-wl-FYs" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="1242" y="-104"/>
        </scene>
    </scenes>
    <resources>
        <systemColor name="systemBackgroundColor">
            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
        </systemColor>
    </resources>
</document>
